Fix Panel-Header (visible in Closed-State)

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -9,6 +9,8 @@
 @panel-bg:              #222222;
 @well-bg:               @panel-bg;
 @panel-primary-border:  #FFFFFF;
+@panel-default-heading-bg: #333333;
+@panel-default-text:    #FFFFFF;
 
 @navbar-default-link-color: #FFFFFF;
 
